chore: use list of for creating collections